--- a/src/launcher/CMakeLists.txt
+++ b/src/launcher/CMakeLists.txt
@@ -22,6 +22,8 @@ set_target_properties(
 	RUNTIME_OUTPUT_DIRECTORY ${GAME_DIR}
 	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${GAME_DIR}
 	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${GAME_DIR}
+	
+	VS_DEBUGGER_WORKING_DIRECTORY ${GAME_DIR}
 )
 
 # Set as startup project in visual studio
