--- a/src/launcher/CMakeLists.txt
+++ b/src/launcher/CMakeLists.txt
@@ -19,11 +19,11 @@ add_executable( Launcher ${SRC_FILES} )
 set_target_properties(
 	Launcher PROPERTIES
 	OUTPUT_NAME sidury
-	RUNTIME_OUTPUT_DIRECTORY ${GAME_DIR}
-	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${GAME_DIR}
-	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${GAME_DIR}
+	RUNTIME_OUTPUT_DIRECTORY ${CH_BUILD}
+	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CH_BUILD}
+	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CH_BUILD}
 	
-	VS_DEBUGGER_WORKING_DIRECTORY ${GAME_DIR}
+	VS_DEBUGGER_WORKING_DIRECTORY ${CH_BUILD}
 )
 
 # Set as startup project in visual studio
