--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,11 @@ cmake_minimum_required( VERSION 3.18 FATAL_ERROR )
 
 set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
-set( GAME_DIR ${CMAKE_CURRENT_LIST_DIR}/sidury )
-
 project( Sidury )
 
 # Add Chocolate Framework DLLs
-add_subdirectory( chocolate )
+# add_subdirectory( ../chocolate ${CMAKE_CURRENT_LIST_DIR} )
+add_subdirectory( ../chocolate ../chocolate )
 
 # grab the globals and put them here
 get_property( CH_ROOT GLOBAL PROPERTY CH_ROOT )
