--- a/src/launcher/CMakeLists.txt
+++ b/src/launcher/CMakeLists.txt
@@ -11,11 +11,18 @@ set_target_properties(
 	SiduryLauncher PROPERTIES
 	OUTPUT_NAME sidurylauncher
 	RUNTIME_OUTPUT_DIRECTORY ${CH_BUILD}
-	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CH_BUILD}
-	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CH_BUILD}
 	
 	VS_DEBUGGER_WORKING_DIRECTORY ${CH_BUILD}
 )
+
+# set output directories for all builds (Debug, Release, etc.)
+foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
+    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+    set_target_properties(
+    	SiduryLauncher PROPERTIES
+    	RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CH_BUILD}
+    )
+endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
 
 # Set as startup project in visual studio
 set_property( DIRECTORY ${CMAKE_CURRENT_LIST_DIR} PROPERTY VS_STARTUP_PROJECT SiduryLauncher )
