--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -24,6 +24,8 @@ set(
 	${CH_THIRDPARTY}/speedykeyv/KeyValue.h
 )
 
+include( ${CH_ROOT}/scripts/rmlui.cmake )
+
 add_library( Graphics SHARED ${SRC_FILES} ${PUBLIC_FILES} ${THIRDPARTY_FILES} )
 
 target_link_libraries(
