make 2 launchers and update SDL2 linking

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -43,10 +43,12 @@ link_directories(
 	"$<$<CONFIG:Debug>:${FLATBUFFERS_DIR_DEBUG}>"
 	"$<$<CONFIG:Release>:${FLATBUFFERS_DIR_RELEASE}>"
 	"$<$<CONFIG:RelWithDebInfo>:${FLATBUFFERS_DIR_RELEASE}>"
+	"$<$<CONFIG:Profile>:${FLATBUFFERS_DIR_RELEASE}>"
 
 	"$<$<CONFIG:Debug>:${MOZJPEG_DIR_DEBUG}>"
 	"$<$<CONFIG:Release>:${MOZJPEG_DIR_RELEASE}>"
 	"$<$<CONFIG:RelWithDebInfo>:${MOZJPEG_DIR_RELEASE}>"
+	"$<$<CONFIG:Profile>:${MOZJPEG_DIR_RELEASE}>"
 )
 
 # include( ${CH_ROOT}/scripts/rmlui.cmake )
@@ -59,6 +61,7 @@ target_link_libraries(
 	PRIVATE
 	Core
 	ImGui
+	SDL2
 	flatbuffers
 	jpeg-static
 	turbojpeg-static
