--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 project( Sidury )
 
 option( STEAM "Build the steam abstraction" OFF )
+option( GAME_OLD "Build the old game code" OFF )
+# option( GAME "Build the game code" OFF )
+option( EDITOR "Build the editor" ON )
 
 # Add Chocolate Framework DLLs
 # add_subdirectory( ../chocolate ${CMAKE_CURRENT_LIST_DIR} )
@@ -24,13 +27,19 @@ set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CH_ROOT}/obj/sidury/Release )
 # Now Add Sidury Projects
 add_subdirectory( src/launcher )
 
-# add_subdirectory( src/game )
-# add_subdirectory( src/sidury2 )
+if ( GAME_OLD )
+	add_subdirectory( src/game )
+else()
+	add_subdirectory( src/sidury2 )
+endif( GAME_OLD )
 
-add_subdirectory( src/editor )
+if( STEAM )
+	add_subdirectory( src/editor )
+endif( STEAM )
+
 add_subdirectory( src/graphics )
 
 if( STEAM )
 	add_subdirectory( src/steam )
-endif( STEAM)
+endif( STEAM )
 
