--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -4,6 +4,8 @@ file(
 	GLOB_RECURSE SRC_FILES_GLOB CONFIGURE_DEPENDS
 	*.cpp
 	*.h
+	../shared/*.cpp
+	../shared/*.h
 )
 
 set(
@@ -109,7 +111,7 @@ endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
 target_precompile_headers( Editor PRIVATE "${CH_PUBLIC}/core/core.h" )
 
 source_group(
-	TREE ${CMAKE_CURRENT_LIST_DIR}
+	TREE ${CMAKE_CURRENT_LIST_DIR}/../
 	PREFIX "Source Files"
 	FILES ${SRC_FILES}
 )
