add map system, test physics objects in editor, scale game world down

--- a/src/editor/CMakeLists.txt
+++ b/src/editor/CMakeLists.txt
@@ -29,6 +29,7 @@ set(
 include_directories(
 	"${CH_THIRDPARTY}/flatbuffers/include"
 	"../graphics"
+	"../shared"
 
 	# Import Formats
 	"${CH_THIRDPARTY}/mozjpeg"
